@@ -5,6 +5,7 @@ V1.1.0
 - NEW : Define number of columns inside the gallery
 - NEW : Added pagination for galleries and images in admin section
 - Changed : Added a URL field to setup the path to the Imagerotator
+- Changed : Add additional parameter to gallery object
 - Bugfix : All albums code couldn't use the slideshow, query is empty for 0
 - Bugfix : Htmlentities() for links in the a href title description
 - Bugfix : Clean up mode for singlepic
